# github-community

./: .codespellignore  .coveragerc  .gitignore  .pre-commit-config.yaml  .prettierignore  .trivyignore.yaml  .yaml-lint.yml  Dockerfile  LICENSE  Makefile  Pipfile  README.md  docker-compose-local.yaml  docker-compose.yaml  pyproject.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post-create.sh
.github/: dependabot.yml
.github/copilot/plans/: plan-repositoryStandardCustomProperty.prompt.md
.github/workflows/: cicd-chart-lint.yml  cicd-codeql-analysis.yml  cicd-container-scan.yml  cicd-container-test.yml  cicd-dependency-review.yml  cicd-deploy-to-development.yml  cicd-deploy-to-prod.yml  cicd-deploy-to-production.yml  cicd-openssf-scorecard.yml  cicd-pre-commit-update.yml  cicd-scan-container.yml  cicd-super-linter.yml  cicd-tests.yml  cicd-zizmor.yml
.github/workflows/deactivated/: cicd-deploy-to-production.yml
app/: app.py
app/main/config/: routes_config.py
app/main/routes/: repository.py
app/main/services/: asset_service.py
app/projects/: README.md
app/projects/acronyms/: admin.py  db_models.py
app/projects/repository_standards/: db_models.py  models.py
app/shared/: admin.py  database.py
app/shared/admin/: admin.py  views.py
app/shared/config/: app_config.py  jinja_config.py  routes_config.py
app/shared/middleware/: auth.py
app/shared/routes/: auth.py  healthz.py  main.py
app/templates/components/: base.html
app/templates/pages/: owner_dashboard_all_repositories.html  repository.html
contrib/: docker-compose.yaml
contrib/db-init/: 01-stub-repository-standards-data.sql
helm/github-community/: Chart.yaml  values-dev.yaml  values-prod.yaml
helm/github-community/templates/: deployment.yaml  ingress-legacy-domain.yaml  ingress-legacy.yaml  ingress.yaml  map-github-repositories-to-owners-job.yaml  service.yaml
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 20250719140956_repository_standards_create_tables.py  20250719181751_acronyms_create_tables.py  20250909T190517_repository_standards_add_owner_type.py  20251110T221624_repository_standards_add_time_column_to_relationships.py  20251117T171043_repository_standards_add_cp_team.py  20260206T113753_repository_standards_add_owner_config_field.py  v01_initial_revision.py  v01_repositoy_standards_create_tables.py  v02_acronyms_create_table.py  v02_acronyms_data_upload.py  v03_acronyms_data_upload.py  v04_repository_standards_add_business_unit_owners.py
test/: container-structure-test.yml
test/test_app/test_config/: test_repository_compliance_config.py
test/test_app/test_jobs/: test_map_github_repositories_to_owners.py
test/test_app/test_routes/: test_auth.py  test_main.py
(+57 files in other folders)
