[project]
name = "github-community"
version = "1.0.0"
description = "Passionate engineers delivering great services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.17.1",
  "authlib==1.6.5",
  "flask==3.1.2",
  "flask-cors==6.0.1",
  "flask-limiter==4.0.0",
  "flask-sqlalchemy==3.1.1",
  "govuk-frontend-jinja==3.9.0",
  "gunicorn==23.0.0",
  "psycopg2-binary==2.9.11",
  "pygithub==2.8.1",
  "sentry-sdk==2.43.0",
]

[dependency-groups]
dev = [
  "coverage==7.11.0",
  "pre-commit==4.3.0",
  "pytest==8.4.2",
  "ruff==0.14.3",
  "zizmor==1.16.2",
]

[tool.sqlfluff.core]
dialect = "postgres"

# [tool.ruff.lint]
# select = [
#     # flake8-bugbear
#     "B",
#     # pycodestyle
#     "E",
#     # Pyflakes
#     "F",
#     # isort
#     "I",
#     # flake8-simplify
#     "SIM",
#     # pyupgrade
#     "UP",
# ]
