[project]
name = "github-community"
version = "1.0.0"
description = "Passionate engineers delivering great services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.17.2",
  "authlib==1.6.5",
  "flask==3.1.2",
  "flask-cors==6.0.1",
  "flask-limiter==4.1.1",
  "flask-sqlalchemy==3.1.1",
  "govuk-frontend-jinja==3.9.0",
  "gunicorn==23.0.0",
  "psycopg2-binary==2.9.11",
  "pygithub==2.8.1",
  "sentry-sdk==2.47.0",
  "urllib3==2.6.1",
  "werkzeug==3.1.4",
]

[dependency-groups]
dev = [
  "coverage==7.13.0",
  "pre-commit==4.5.0",
  "pytest==8.4.2",
  "ruff==0.14.8",
  "zizmor==1.18.0",
]

[tool.sqlfluff.core]
dialect = "postgres"

# [tool.ruff.lint]
# select = [
#     # flake8-bugbear
#     "B",
#     # pycodestyle
#     "E",
#     # Pyflakes
#     "F",
#     # isort
#     "I",
#     # flake8-simplify
#     "SIM",
#     # pyupgrade
#     "UP",
# ]
