[project]
name = "github-community"
version = "1.0.0"
description = "Passionate engineers delivering great services"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "alembic==1.18.0",
  "authlib==1.6.6",
  "flask==3.1.2",
  "flask-cors==6.0.2",
  "flask-limiter==4.1.1",
  "flask-sqlalchemy==3.1.1",
  "govuk-frontend-jinja==3.9.0",
  "gunicorn==23.0.0",
  "psycopg2-binary==2.9.11",
  "pygithub==2.8.1",
  "sentry-sdk==2.49.0",
  "urllib3==2.6.3",
  "werkzeug==3.1.5",
]

[dependency-groups]
dev = [
  "coverage==7.13.1",
  "pre-commit==4.5.1",
  "pytest==8.4.2",
  "ruff==0.14.11",
  "zizmor==1.20.0",
]

[tool.sqlfluff.core]
dialect = "postgres"

# [tool.ruff.lint]
# select = [
#     # flake8-bugbear
#     "B",
#     # pycodestyle
#     "E",
#     # Pyflakes
#     "F",
#     # isort
#     "I",
#     # flake8-simplify
#     "SIM",
#     # pyupgrade
#     "UP",
# ]
